--- a/QLPhongMachTu(DOAN).csproj
+++ b/QLPhongMachTu(DOAN).csproj
@@ -34,7 +34,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\DatabaseConnection.cs" />
     <Compile Include="DTO\BacSi.cs" />
     <Compile Include="DTO\BaseConNguoi.cs" />
     <Compile Include="DTO\BenhNhan.cs" />
@@ -61,12 +64,48 @@
     <Compile Include="DTO\PhongKhoa.cs" />
     <Compile Include="DTO\Thuoc.cs" />
     <Compile Include="DTO\ToaThuoc.cs" />
-    <Compile Include="DTO\User.cs" />
+    <Compile Include="DTO\TaiKhoan.cs" />
+    <Compile Include="GUI\HoaDonKhamBenh.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\HoaDonKhamBenh.Designer.cs">
+      <DependentUpon>HoaDonKhamBenh.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\KhamBenh.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="GUI\KhamBenh.Designer.cs">
       <DependentUpon>KhamBenh.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\KhamBenh_BS.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\KhamBenh_BS.Designer.cs">
+      <DependentUpon>KhamBenh_BS.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\KhamBenh_LT.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\KhamBenh_LT.Designer.cs">
+      <DependentUpon>KhamBenh_LT.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\KhoThuoc.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\KhoThuoc.Designer.cs">
+      <DependentUpon>KhoThuoc.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\LichLamViec_BS.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\LichLamViec_BS.Designer.cs">
+      <DependentUpon>LichLamViec_BS.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\LichLamViec_QL.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\LichLamViec_QL.Designer.cs">
+      <DependentUpon>LichLamViec_QL.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Login.cs">
       <SubType>Form</SubType>
@@ -116,6 +155,30 @@
     <Compile Include="GUI\NavbarYTa.Designer.cs">
       <DependentUpon>NavbarYTa.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\NhanVien.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\NhanVien.Designer.cs">
+      <DependentUpon>NhanVien.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\ThanhToan_DS.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\ThanhToan_DS.Designer.cs">
+      <DependentUpon>ThanhToan_DS.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\ThongKe.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\ThongKe.Designer.cs">
+      <DependentUpon>ThongKe.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\ToaThuoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\ToaThuoc.Designer.cs">
+      <DependentUpon>ToaThuoc.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\SignUp.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -146,10 +209,34 @@
     <Compile Include="GUI\ToaThuocDonThuoc.Designer.cs">
       <DependentUpon>ToaThuocDonThuoc.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\ToaThuocDonThuoc_DS.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\ToaThuocDonThuoc_DS.Designer.cs">
+      <DependentUpon>ToaThuocDonThuoc_DS.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="GUI\HoaDonKhamBenh.resx">
+      <DependentUpon>HoaDonKhamBenh.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\KhamBenh.resx">
       <DependentUpon>KhamBenh.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\KhamBenh_BS.resx">
+      <DependentUpon>KhamBenh_BS.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\KhamBenh_LT.resx">
+      <DependentUpon>KhamBenh_LT.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\KhoThuoc.resx">
+      <DependentUpon>KhoThuoc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\LichLamViec_BS.resx">
+      <DependentUpon>LichLamViec_BS.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\LichLamViec_QL.resx">
+      <DependentUpon>LichLamViec_QL.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -175,6 +262,9 @@
     <EmbeddedResource Include="GUI\NavbarYTa.resx">
       <DependentUpon>NavbarYTa.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\NhanVien.resx">
+      <DependentUpon>NhanVien.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\SignUp.resx">
       <DependentUpon>SignUp.cs</DependentUpon>
     </EmbeddedResource>
@@ -187,8 +277,20 @@
     <EmbeddedResource Include="GUI\ThanhToan.resx">
       <DependentUpon>ThanhToan.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ThanhToan_DS.resx">
+      <DependentUpon>ThanhToan_DS.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ThongKe.resx">
+      <DependentUpon>ThongKe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ToaThuoc.resx">
+      <DependentUpon>ToaThuoc.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\ToaThuocDonThuoc.resx">
       <DependentUpon>ToaThuocDonThuoc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ToaThuocDonThuoc_DS.resx">
+      <DependentUpon>ToaThuocDonThuoc_DS.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -216,6 +318,9 @@
   <ItemGroup>
     <Content Include="Image\Background.jpg" />
     <None Include="Image\duocthu.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="BUS\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
